REFACTOR update resume descriptions ADD icons for new tech and tools

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             Full-Stack ASP.NET Web Developer and GIS Analyst
           </span>
           <p class="intro-body">
-            I have solid knowledge of designing and developing full-stack web applications using various modern frameworks and technology stacks. In addition, I have 10 years experience as a GIS analyst, 6 years of SQL Database experience, and 4 years of small team leadership. My area of focus in GIS is spatial statistics and predictive analysis. I manage small teams in daily operations through planning, execution, reporting, and documentation.
+            I am an experienced software engineer with 7 years of professional expertise, primarily in the healthcare industry. My work has given me a deep understanding of the regulatory and security requirements involved in handling sensitive healthcare information, and I consistently incorporate best practices to protect user data. My specialization lies in developing high-quality Angular applications that not only enhance user experiences but also drive revenue growth. I take great pride in mentoring my teammates, helping them grow both technically and professionally, while constantly expanding my own knowledge of new technologies and innovative approaches to software development.
           </p>
         </div>
         <div class="card-group">
@@ -45,6 +45,9 @@
                     <img src="./assets/icons/css.png" class="avatar" alt="CSS 3"/>
                   </span>
                   <span class="technology-item">
+                    <img src="./assets/icons/scss.png" class="avatar" alt="SCSS" />
+                  </span>
+                  <span class="technology-item">
                     <img src="./assets/icons/es6.jpeg" class="avatar" alt="Javascript ES6" />
                   </span>
                   <span class="technology-item">
@@ -52,6 +55,9 @@
                   </span>
                   <span class="technology-item">
                     <img src="./assets/icons/html5.png" class="avatar" alt="HTML 5" />
+                  </span>
+                  <span class="technology-item">
+                    <img src="./assets/icons/jestjs.png" class="avatar" alt="Jest JS" />
                   </span>
                   <span class="technology-item">
                     <img src="./assets/icons/jasmine.jpeg" class="avatar" alt="Jasmine JS" />
@@ -76,6 +82,10 @@
                   </span>
                   <span class="technology-item">
                     <img src="./assets/icons/typescript.png" class="avatar" alt="Typescript" />
+                  </span>
+                  <span>
+                    <img src="./assets/icons/jQuery.png" class="avatar" alt="jQuery" />
+                  </span>
                   </span>
                 </div>
               </div>
@@ -109,7 +119,15 @@
                 <span class="technology-item">
                   <img src="./assets/icons/restful_api.png" class="avatar" alt="REST APIs" />
                 </span>
-
+                <span class="technology-item">
+                  <img src="./assets/icons/websockets.png" class="avatar" alt="Web Sockets" />
+                </span>
+                <span class="technology-item">
+                  <img src="./assets/icons/automapper.png" class="avatar" alt="AutoMapper" />
+                </span>
+                <span class="technology-item">
+                  <img src="./assets/icons/masstransit.png" class="avatar" alt="MassTransit" />
+                </span>
               </div>
             </div>
           </div>
@@ -125,6 +143,9 @@
                 </span>
                 <span class="technology-item">
                   <img src="./assets/icons/postgresql.png" class="avatar" alt="PostgreSQL" />
+                </span>
+                <span class="technology-item">
+                  <img src="./assets/icons/mongodb.png" class="avatar" alt="MongoDb" />
                 </span>
               </div>
             </div>
@@ -158,7 +179,7 @@
             </div>
           </div>
           <div class="card">
-            <span class="card-title">Other Software and Technology</span>
+            <span class="card-title">Other Tools</span>
             <div class="card-text">
               <div class="technology-container">
                 <span class="technology-item">
@@ -193,6 +214,15 @@
                 </span>
                 <span class="technology-item">
                   <img src="./assets/icons/markdown.png" class="avatar" alt="Markdown" />
+                </span>
+                <span>
+                  <img src="./assets/icons/visualstudio.png" class="avatar" alt="Visual Studio" />
+                </span>
+                <span>
+                  <img src="./assets/icons/docker.png" class="avatar" alt="Docker" />
+                </span>
+                <span class="technology-item">
+                  <img src="./assets/icons/kubernetes.png" class="avatar" alt="Kubernetes" />
                 </span>
               </div>
             </div>
@@ -265,31 +295,22 @@
         </span>
         <div>Cardinal Health - Sonexus</div>
         <div>February 2022 to September 2022, March 2024 to present</div>
-        <p>
-          Supported the full software development lifecycle for multiple customer-facing applications in the Specialty Pharmacy area.
-        </p>
         <ul class="list-group">
-          <li class="list-group-item">Acted as Lead UI Engineer for several products under the SETH program</li>
-          <li class="list-group-item">Lead a team of 3 UI developers for the Patient Scheduling product. The app is driven by an orchestration
-            service using Web Socket messaging. The app is completely configurable for which pages are shown, what order they are displayed, and 
-            which users are allowed to see those pages.
+          <li class="list-group-item">
+            Developed and launched the Digital Enrollment Program (DEP): Digitized patient enrollment into specialized programs by integrating clients’ internal enrollment forms with the FHIR Questionnaire model. Generated approximately $2M in revenue per implementation, with over 10 successful client deployments. Implementations do not require new code other than CSS styling.
           </li>
           <li class="list-group-item">
-            Integrated FHIR Questioninaire Model into a Questionnaire Service. Created an Questionnaire Management application to create, clone, or
-            edit Questionnaires to be consumed in other applications. Collaborated on an Angular Library to display the Questionnaires using Dynamic Forms. The Questionnaire
-            model allows future form-heavy applications, which need to be customized for each client, to be generated less software engineer intervention. It reduces 
-            the customization to a configuration issue rather than a development inssue.
+            Designed and implemented a Patient Scheduling application: Enabled real-time scheduling by leveraging Web Sockets and a third-party SaaS for process orchestration. The web application itself contained no business logic for feature determination; instead, the third-party orchestration SaaS dynamically dictated user features based on real-time Web Socket traffic.
           </li>
           <li class="list-group-item">
-            Mentored two junior developers in professional development: presenting in a business environment, demonstrating application features, code reviews, and 
-            documentation.
+            Mentored and led software engineering teams: Provided guidance and technical mentorship to two junior software engineers, emphasizing both technical and soft skill development. Supported them in delivering presentations on development projects, improving estimation techniques, and conducting effective code reviews. Oversaw a team of up to five engineers, fostering collaboration, skill growth, and successful project outcomes.
           </li>
         </ul>
         <ul class="list-group">
-          <li class="list-group-item">Angular (v12), Typescript, RxJS, Bootstrap, CSS, HTML5</li>
-          <li class="list-group-item">C#, ASP.NET, .Net Core, Microsoft SQL Server</li>
-          <li class="list-group-item">Azure DevOps, Git, CI/CD, Agile</li>
-          <li class="list-group-item">Unit Testing, Jasmine, Karma</li>
+          <li class="list-group-item">Angular (v12), Typescript, RxJS, Bootstrap, CSS, SCSS, HTML5</li>
+          <li class="list-group-item">C#, ASP.NET, .Net Core, Microsoft SQL Server, PostgreSQL, MongoDb</li>
+          <li class="list-group-item">Azure DevOps, Git, CI/CD, Agile, Docker</li>
+          <li class="list-group-item">Unit Testing, Jasmine, Karma, Jest</li>
         </ul>
       </section>
       <section id="quest">
@@ -298,9 +319,17 @@
         </span>
         <div>Quest Analytics, LLC</div>
         <div>September 2022 to February 2023</div>
-        <p>
-          Supported the full software development lifecycle for multiple .Net microservices and core platform applications.
-        </p>
+        <ul class="list-group">
+          <li class="list-group-item">
+            Supported the Software Development Lifecycle (SDLC): Managed multiple components within the QES SaaS platform, ensuring smooth development and delivery processes.
+          </li>
+          <li class="list-group-item">
+            Enhanced platform capabilities: Designed and implemented new features to improve reporting accuracy and streamline debugging workflows.
+          </li>
+          <li class="list-group-item">
+            Contributed to team strategy and quality assurance: Provided constructive feedback during code reviews and actively participated in developer roundtables to shape team strategies and refine development processes.
+          </li>
+        </ul>
         <ul class="list-group">
           <li class="list-group-item">React.js, Typescript, CSS, HTML5</li>
           <li class="list-group-item">C#, ASP.Net, .Net Core, Microsoft SQL Server, Redis, SEQ, MongoDb</li>
@@ -314,9 +343,17 @@
         </span>
         <div>ECCO-Select on behalf of VMLY&R</div>
         <div>September 2021 to January 2022</div>
-        <p>
-          Supported multiple client applications using Adobe Experience Manager. Created components for authorable content. Applied internal and client-based style guidelines and coding standards. Collaborated with team members to gain new skills and impart knowledge based on personal experience.
-        </p>
+        <ul class="list-group">
+          <li class="list-group-item">
+            Enhanced client applications with Adobe Experience Manager (AEM): Supported multiple client-facing applications by creating customizable components for authorable content, ensuring flexibility and usability.
+          </li>
+          <li class="list-group-item">
+            Adhered to rigorous standards: Applied both internal and client-specific style guidelines and coding standards to maintain consistency and quality across projects.
+          </li>
+          <li class="list-group-item">
+            Fostered skill development: Collaborated with team members to acquire new competencies and shared insights based on personal experience to strengthen team expertise.
+          </li>
+        </ul>
         <ul class="list-group">
           <li class="list-group-item">Adobe Experience Manager (v 6.5)</li>
           <li class="list-group-item">Java 8 SDK</li>
@@ -332,9 +369,17 @@
         </span>
         <div>Prime Digital Academy</div>
         <div>November 2020 to September 2021</div>
-        <p>
-          Conveyed a complex technical curriculum to an audience of adult learners from a variety of backgrounds. Contributed to incremental changes and improvements of the program curriculum and provided individual feedback and guidance for students daily.
-        </p>
+        <ul class="list-group">
+          <li class="list-group-item">
+            Educated and empowered adult learners transitioning into software engineering: Delivered a complex technical curriculum to diverse learners with non-technical backgrounds, effectively bridging knowledge gaps and fostering career transformations.
+          </li>
+          <li class="list-group-item">
+            Refined and improved educational content: Contributed to continuous curriculum enhancement by identifying opportunities for incremental improvements and aligning material with industry standards.
+          </li>
+          <li class="list-group-item">
+            Provided personalized mentorship: Delivered daily feedback and guidance to students, supporting their technical growth and building their confidence in tackling software engineering challenges.
+          </li>
+        </ul>
         <ul class="list-group">
           <li class="list-group-item">React, Javascript, jQuery, HTML 5, and CSS</li>
           <li class="list-group-item">Postgresql, T-SQL</li>
@@ -351,9 +396,17 @@
         </span>
         <div>Blue Cross Blue Shield of Kansas City</div>
         <div>November 2018 to November 2020</div>
-        <p>
-          Supported multiple portal applications for public-facing audiences. Developed unit testing and end-to-end (e2e) testing strategies for the front-end software. Wrote approximately 600 unit tests in four weeks to ensure an entire portal was unit tested before being released to production. Developed written best practices guidelines for unit testing and e2e testing based on research and organizational requirements.
-        </p>
+        <ul class="list-group">
+          <li class="list-group-item">
+            Ensured quality and reliability for public-facing portal applications: Supported multiple portal applications, focusing on delivering seamless user experiences for diverse audiences.
+          </li>
+          <li class="list-group-item">
+            Implemented robust testing frameworks: Developed comprehensive unit and end-to-end (e2e) testing strategies for front-end software, writing approximately 600 unit tests in four weeks to achieve full portal coverage prior to production release.
+          </li>
+          <li class="list-group-item">
+            Standardized testing practices: Authored detailed best practice guidelines for unit and e2e testing, based on in-depth research and alignment with organizational standards, fostering consistency and quality across development teams.
+          </li>
+        </ul>
         <ul class="list-group">
           <li class="list-group-item">Angular (7, 8, 9, and 10), Typescript</li>
           <li class="list-group-item">Jasmine, Karma, Protractor</li>
